Fix more icons in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,8 @@
     .sp-container .sp-variable-icon.folder_fill,
     .sp-container .sp-variable-icon.arrow_down_doc_fill,
     .sp-container .sp-variable-icon.map_pin,
+    .sp-container .sp-variable-icon.text_bubble,
+    .sp-container .sp-variable-icon.link,
     .sp-container .sp-variable-icon.doc_on_clipboard {
         background: #1d222b !important;
         color: #007aff !important;
